<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>mn.gov.xyp</groupId>
    <artifactId>xyp-client-code-java</artifactId>
    <version>1.0-SNAPSHOT</version>
    <description>demo xyp client code java</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <java.version>21</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>4.0.5</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-core</artifactId>
            <version>4.0.6</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>4.0.6</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.ws</groupId>
            <artifactId>jaxws-ri</artifactId>
            <version>4.0.3</version>
            <type>pom</type>
        </dependency>

        <!--	JSN	-->
        <dependency>
            <groupId>javax.json</groupId>
            <artifactId>javax.json-api</artifactId>
            <version>1.1.4</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>1.1.4</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>javax.websocket</groupId>
            <artifactId>javax.websocket-api</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.tyrus.bundles</groupId>
            <artifactId>tyrus-standalone-client</artifactId>
            <version>1.9</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>generate-xyp</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>jaxws-maven-plugin</artifactId>
                        <version>2.6</version>
                        <executions>
                             <execution>
                                <id>generate-xyp-meta</id>
                                <goals>
                                    <goal>wsimport</goal>
                                </goals>
                                <configuration>
                                    <wsdlUrls>
                                        <wsdlUrl>https://xyp.gov.mn/meta-1.5.0/ws?WSDL</wsdlUrl>
                                    </wsdlUrls>
                                    <packageName>mn.gov.xyp.meta</packageName>
                                    <xjcArgs>
                                        <xjcArg>-target</xjcArg><xjcArg>jakarta</xjcArg>
                                    </xjcArgs>
                                    <sourceDestDir>${project.basedir}/src/main/java/</sourceDestDir>
                                    <verbose>true</verbose>
                                    <keep>true</keep>
                                </configuration>
                            </execution>
                            <execution>
                                <id>generate-xyp-citizen</id>
                                <goals>
                                    <goal>wsimport</goal>
                                </goals>
                                <configuration>
                                    <wsdlUrls>
                                        <wsdlUrl>https://xyp.gov.mn/citizen-1.5.0/ws?WSDL</wsdlUrl>
                                    </wsdlUrls>
                                    <packageName>mn.gov.xyp.citizen</packageName>
                                    <xjcArgs>
                                        <xjcArg>-target</xjcArg><xjcArg>jakarta</xjcArg>
                                    </xjcArgs>
                                    <sourceDestDir>${project.basedir}/src/main/java/</sourceDestDir>
                                    <verbose>true</verbose>
                                    <keep>true</keep>
                                </configuration>
                            </execution>
                            <execution>
                                <id>generate-xyp-insurance</id>
                                <goals>
                                    <goal>wsimport</goal>
                                </goals>
                                <configuration>
                                    <wsdlUrls>
                                        <wsdlUrl>https://xyp.gov.mn/insurance-1.5.0/ws?WSDL</wsdlUrl>
                                    </wsdlUrls>
                                    <packageName>mn.gov.xyp.insurance</packageName>
                                    <xjcArgs>
                                        <xjcArg>-target</xjcArg><xjcArg>jakarta</xjcArg>
                                    </xjcArgs>
                                    <sourceDestDir>${project.basedir}/src/main/java/</sourceDestDir>
                                    <verbose>true</verbose>
                                    <keep>true</keep>
                                </configuration>
                            </execution>
                            <execution>
                                <id>generate-xyp-transport</id>
                                <goals>
                                    <goal>wsimport</goal>
                                </goals>
                                <configuration>
                                    <wsdlUrls>
                                        <wsdlUrl>https://xyp.gov.mn/transport-1.5.0/ws?WSDL</wsdlUrl>
                                    </wsdlUrls>
                                    <packageName>mn.gov.xyp.transport</packageName>
                                    <sourceDestDir>${project.basedir}/src/main/java/</sourceDestDir>
                                    <verbose>true</verbose>
                                    <keep>true</keep>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
